# pixallm

./: .env.example  .gitignore  LICENSE  README.md  main.py  pixallm_plan.md  pixellm_plan.md  pyproject.toml
data/: eval_prompts.json
docs/: dsl_design.md
scripts/: prepare_data.py  preview_samples.py  runpod_setup.sh
src/pixallm/: __init__.py  render.py
src/pixallm/data/: __init__.py  prepare.py  prompts.py
src/pixallm/eval/: metrics.py  run_eval.py
src/pixallm/serve/: __init__.py
src/pixallm/train/: sft.py
src/pixellm/: __init__.py  dsl.py  render.py
src/pixellm/data/: prepare.py  prompts.py
src/pixellm/eval/: metrics.py
src/pixellm/rewards/: __init__.py
src/pixellm/train/: sft.py
tests/: test_dsl_roundtrip.py  test_eval_prompts.py  test_sft.py
